2012-06-18  Gregg Tavares  <gman@google.com>

        Expose WEBGL_depth_texture extension to WebGL
        https://bugs.webkit.org/show_bug.cgi?id=87029

        Reviewed by Kenneth Russell.

        * fast/canvas/webgl/resources/webgl-test-utils.js:
        (WebGLTestUtils):
        * fast/canvas/webgl/webgl-depth-texture-expected.txt: Added.
        * fast/canvas/webgl/webgl-depth-texture.html: Added.

2012-06-12  Kinuko Yasuda  <kinuko@chromium.org>

        Support File/DirectoryEntry access for <input type=file> if FileSystem API is enabled
        https://bugs.webkit.org/show_bug.cgi?id=88293

        Reviewed by Tony Chang.

        * fast/forms/file/input-file-entries-expected.txt: Added.
        * fast/forms/file/input-file-entries.html: Added.
        * fast/forms/resources/dir1/UTF8-2.txt: Added.
        * fast/forms/resources/dir1/UTF8.txt: Added.
        * fast/forms/resources/dir2/green.jpg: Added.
        * platform/efl/Skipped:
        * platform/efl/TestExpectations:
        * platform/gtk/TestExpectations:
        * platform/mac/Skipped:
        * platform/qt/Skipped:
        * platform/win/Skipped:
        * platform/wincairo/Skipped:
        * platform/wk2/Skipped:

2012-06-18  Shinya Kawanaka  <shinyak@chromium.org>

        [Crash][Editing] VisibleSelection::adjustSelectionToAvoidCrossingEditingBoundaries() crashes in some Shadow DOM case.
        https://bugs.webkit.org/show_bug.cgi?id=88500

        Reviewed by Ryosuke Niwa.

        * editing/shadow/breaking-editing-boundaries-expected.txt: Added.
        * editing/shadow/breaking-editing-boundaries.html: Added.

2012-06-18  Hajime Morrita  <morrita@chromium.org>

        Unreviewed test marking. Marked border-radius-clip-002.htm as a failure.

        * platform/chromium/TestExpectations:

2012-06-18  Mike Lawther  <mikelawther@chromium.org>

        Crash when setting title dynamically
        https://bugs.webkit.org/show_bug.cgi?id=88083

        Reviewed by Dan Bernstein.
