@@ -104,14 +104,17 @@ function verifyFile(expected, callback, metadata)
 
 function verifyDirectory(expected, callback, entries)
 {
-    returnedEntries = entries;
+    returnedEntries = [];
+    for (var i = 0; i < entries.length; i++) {
+        // Skip the entries that start with '.' (so that we do not get '.svn' etc)
+        if (entries[i].fullPath.indexOf('.') == 0)
+            continue;
+        returnedEntries.push(entries[i].fullPath);
+    }
+    returnedEntries.sort();
     shouldEvaluateTo('returnedEntries.length', expected.files.length);
-    var foundPaths = [];
     for (var i = 0; i < returnedEntries.length; i++)
-        foundPaths.push(returnedEntries[i].fullPath);
-    foundPaths.sort();
-    for (var i = 0; i < foundPaths.length; i++)
-        debug(foundPaths[i]);
+        debug(returnedEntries[i]);
     callback();
 }
 
